# GamingApp

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
crates/application/: Cargo.toml
crates/application/src/: auth_engine.rs  client_session.rs  error.rs  host_session.rs  lib.rs  session_manager.rs  traits.rs  video_packetizer.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: clock.rs  lib.rs  network.rs
crates/infrastructure/src/audio/: capture.rs  codec.rs  mod.rs  playback.rs
crates/infrastructure/src/input/: capture.rs  inject.rs  mod.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: commands.rs  events.rs  lib.rs
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
