[package]
name = "gaming-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "gaming_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
gaming-presentation = { path = "../crates/presentation" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gaming-presentation = { path = "../crates/presentation", features = ["inject-linux"] }
